Added EntityFramework Added Postgres DB connection Moved DB calls from controller to a repo
